fixed: margin on expanded nav, z-index jumbotron text(cta)

--- a/css/index.css
+++ b/css/index.css
@@ -145,6 +145,12 @@ html {
   max-width: 1024px;
   width: 100%;
 }
+@media (max-width: 400px) {
+  .container {
+    max-width: 320px;
+    width: 100%;
+  }
+}
 p {
   font-weight: regular;
   font-size: 1.6rem;
@@ -181,15 +187,18 @@ header {
   flex-direction: row-reverse;
   justify-content: space-between;
 }
+@media (max-width: 400px) {
+  header {
+    max-width: 320px;
+  }
+}
 header .logo {
-  margin-top: 10px;
   font-weight: bold;
   font-size: 2.4rem;
   color: #ffffff;
   margin-left: 8.4%;
 }
 header .dropdown .burger {
-  margin-top: 10px;
   margin-left: 43%;
   cursor: pointer;
 }
@@ -203,14 +212,21 @@ header .dropdown .links {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  max-width: 1024px;
   width: 100vw;
   height: 100vh;
+}
+@media (max-width: 400px) {
+  header .dropdown .links {
+    max-width: 320px;
+    margin: auto;
+  }
 }
 header .dropdown .links .link {
   font-size: 6.4rem;
   line-height: 7.5rem;
   font-weight: bold;
-  color: white;
+  color: #ffffff;
   text-decoration: none;
 }
 header .dropdown .links .link:hover {
@@ -508,14 +524,14 @@ header .dropdown .links .link:hover {
     left: 0%;
   }
 }
-.cta-services-text {
+.cta-services .cta-services-text {
   font-size: 6.4rem;
   font-weight: bold;
   color: #ffffff;
   position: absolute;
   z-index: 2;
   top: 165px;
-  left: 85px;
+  left: 20.3%;
 }
 .tab-container {
   max-width: 855px;
