--- a/less/global.less
+++ b/less/global.less
@@ -11,6 +11,11 @@ html {
   margin: auto;
   max-width: 1024px;
   width: 100%;
+  @media @phone {
+    max-width: 320px;
+    width: 100%;
+
+  }
 }
 
 p {
