--- a/less/navigation.less
+++ b/less/navigation.less
@@ -9,8 +9,11 @@ header {
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-between;
+  @media @phone {
+    max-width: 320px;
+  }
   .logo {
-    margin-top: 10px;
+    // margin-top: 10px;
     font-weight: bold;
     font-size: 2.4rem;
     color: @white;
@@ -18,10 +21,8 @@ header {
   }
   .dropdown {
     .burger {
-      margin-top: 10px;
+      // margin-top: 10px;
       margin-left: 43%;
-    
-
       cursor: pointer;
     }
     .dropdown-hidden {
@@ -34,13 +35,19 @@ header {
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      max-width: 1024px;
       width: 100vw;
       height: 100vh;
+      @media @phone {
+        max-width: 320px;
+    
+        margin: auto;
+      }
       .link {
         font-size: 6.4rem;
         line-height: 7.5rem;
         font-weight: bold;
-        color: white;
+        color: @white;
         text-decoration: none;
         &:hover {
           color: @black;
