--- a/less/services-page.less
+++ b/less/services-page.less
@@ -1,12 +1,14 @@
-.cta-services-text {
-        font-size: 6.4rem;
-        font-weight: bold;
-        color: @white;
-        position: absolute;
-        z-index: 2;
-        top: 165px;
-        left: 85px;
+.cta-services {
+    .cta-services-text {
+            font-size: 6.4rem;
+            font-weight: bold;
+            color: @white;
+            position: absolute;
+            z-index: 2;
+            top: 165px;
+            left: 20.3%;
     }
+}
 
 .tab-container {
     max-width: 855px;
